--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 title: Nicks Student Blog
+---
+
 <div class="blurb">
-	<h1>Hi there, I'm Nick!</h1>
-	<p>Some of my </em> goals and achievements <a href="/about">HERE.</a></p>
+  <h1>Hi there, I'm Nick!</h1>
+  <p>Some of my <em>goals and achievements</em> <a href="/about">HERE.</a></p>
 </div><!-- /.blurb -->
