--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ title: Nicks Student Blog
 <div class="blurb">
   <h1>Hi there, I'm Nick!</h1>
   <p>Some of my <em>goals and achievements</em> <a href="/about">HERE.</a></p>
-</div><!-- /.blurb -->
+</div>
